--- a/src/routes/Proof/components/proof.scss
+++ b/src/routes/Proof/components/proof.scss
@@ -16,7 +16,9 @@ body {
   flex-wrap:wrap;
   align-content: right;
 }
-
+.btn {
+  font-family: Comic Sans MS;
+}
 .borrow {
   height:13px;
   width: 32px;
@@ -37,10 +39,11 @@ body {
 
 .rowWrapper {
   font-family: Comic Sans MS;
-  //background: #e0e0e7;
   display:flex;
-  flex-direction:row;
-  flex-wrap:wrap;
+ // flex-direction:row;
+ // flex-wrap:wrap;
+    align-items: flex-start;
+    justify-content: space-between;
   .filler {
      @extend .box-size;
   }
@@ -55,5 +58,32 @@ body {
   .answer {
     @extend .box-size;
     background:white;
+  }
+}
+
+.config {
+  border: 1px solid black;
+  .difficulty-wrapper{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
+    padding:20px;
+    .radio {
+      margin-top: 0px;
+      width:90px;
+      height:30px;
+      border: 1px solid black;
+    // align-content: center;
+    // vertical-align: top;
+    }
+  }
+  .math-types{
+    width:100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 20px;
+    align-content: center;
   }
 }
