programatically set active class in config section

--- a/src/routes/Proof/components/proof.scss
+++ b/src/routes/Proof/components/proof.scss
@@ -21,6 +21,10 @@ body {
 .btn {
   font-family: Comic Sans MS;
 }
+.btn-play {
+  width:95%;
+  background: #7F85D3;
+}
 .borrow {
   height:13px;
   width: 32px;
